--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
-    "react-redux": "5.0.7",
-    "redux": "4.0.0"
+    "lodash": "^4.17.11",
+    "react": "^16.6.3",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-form": "^7.4.2"
   }
 }
